--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -36,7 +36,7 @@
         <i class="fa-solid fa-moon"></i>
       </div>
      <% if(currentUser){ %>
-      <div class="user-profile_box"> <a href="/shopcard"> <i class="fa-solid fa-user"></i> </a></div>
+      <div class="user-profile_box"> <a href="/shopcard/user-profile"> <i class="fa-solid fa-user"></i> </a></div>
       <div class="user-card"><i class="fa-solid fa-cart-shopping"></i></div>
       <div class="registerBox"><a href="/shopcard/authenticate/logout"><button class="registerBtn">Logout</button> </a> </div> 
     <% } %>
