--- a/view/includes/footer.ejs
+++ b/view/includes/footer.ejs
@@ -31,7 +31,7 @@
             <h2 class="footer-sc-head-line">Policies & Legal</h2>
             <div class="policies-legal_container">
                 <a class="footer_link_sty" href="/shopcard/terms-condition">Terms Condition</a>
-                <a class="footer_link_sty" href="/shopcard/privacypolicy">Privacy Policy</a>
+                <a class="footer_link_sty" href="/shopcard/privacy-policy">Privacy Policy</a>
                 <a class="footer_link_sty" href="/shopcard/shipping_return">Shipping & Retrun</a>
                 <a class="footer_link_sty" href="/shopcard/refund">Refund & Cancellation</a>
             </div>
