--- a/view/layouts/boilerPlateCode.ejs
+++ b/view/layouts/boilerPlateCode.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/login_register.css">
     <link rel="stylesheet" href="/css/user_profile.css">
     <link rel="stylesheet" href="/css/buy.css">
+    <link rel="stylesheet" href="/css/privacy_policy.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Github Transition Cdn Link To get Smooth Transition -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> 
