Working on Darkmode Switching

--- a/view/listings/index.ejs
+++ b/view/listings/index.ejs
@@ -1,5 +1,5 @@
     <% layout("/layouts/boilerPlateCode.ejs") -%>
-    <body >
+    
     <!-- HeroSection-->
     <section class="hero-section_container">
       <div class="hm-prevBtn"><button id="prev-img-sld"><i class="fa-solid fa-arrow-left"></i></button></div>
@@ -25,7 +25,7 @@
         </div>
       </div>    
       <div class="hm-nextBtn"><button id="next-img-sld"><i class="fa-solid fa-arrow-right"></i></button></div>  
-    </section>
+    </section> 
     
     <!--Descover more User Related Products Section-->
     <section id="user-related-product-box">
@@ -100,7 +100,7 @@
     <!-- New Arival Products-->
      <section id="newArival-product-box">
        <div class="new-arivale-para">
-         <h2 id="new-arival-text" data-aos="fade-left" data-aos-duration="500" >New Arival.<span>REY backpacks & bages</span></h2>
+         <h2 id="new-arival-text" data-aos="fade-left" data-aos-duration="500" >New Arival  <span>REY backpacks & bages</span></h2>
          <div class="new-arval-prev-next-btn" data-aos="fade-down" data-aos-duration="500" >          
           <button id="new-arval-prevBtn"><i class="fa-solid fa-arrow-left"></i></button>
           <button id="new-arival-nextBtn"><i class="fa-solid fa-arrow-right"></i></button>
@@ -489,6 +489,5 @@
        <!-- Special Offers for girls object container End here --> 
 
        <pre data-Product="<%=JSON.stringify(allProduct) %>" id="DataValueforfilter" style="display: none;" ></pre> 
-       <script src="/javascript/index.js" ></script>   
+       <script src="/javascript/index.js" ></script>  
 
-</body>
