--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,31 @@
-:root{
-    --md-wht--color:#ecebeacc;
-    --lw-wht-color:#18171779;
-    --drk-wht-color:#fff;
-    --back-color:#1a1d1c;
-    --ble-color-txt:#061827;
-    --hover-clor-icon:#55555533;
-    --dark-red-color:#e00d0d;
+/* CSS Variables for Dark mode and light mode */
+:root {
+    --body-background-color:#f6fafa; /* Dark Mode Color #08131a;  */
+    --body-text-hero-color:#061827; /* Dark Mode Color  */
+    --body-text-color:#000;
+    --body-text-light-color:#fff;
+    --text-md-black-color:#666565;
+    --icon-color:#000;
+    --dark-red-color: #e00d0d;
+    --button-initial-color:#081e25;
+    --button-hover-color:#0a2b3c;
+    --button-text-color:#fff;
+}
+
+body.dark {
+    --md-wht--color: #ecebeacc;
+    --lw-wht-color: #18171779;
+    --drk-wht-color: #fff;
+    --back-color: #1a1d1c;
+    --ble-color-txt: #061827;
+    --hover-clor-icon: #55555533;
+    --dark-red-color: #e00d0d;
+}
+
+/* Dark Mode */
+.darkmode{
+    --body-background-color:#f6fafa; 
+
 }
 *{
     margin:0;
@@ -22,9 +42,11 @@ html, body{
     min-height: calc(100vh - 10em); 
     padding-bottom: 3em; 
     flex: 1;   
-    background-color: #e9eaeabb; 
+    background-color: #f6fafa; 
+    /* background-color: #08131a; Final Color */
     overflow-x: hidden;
 }
+
 
 /* Hero Section Stylling Start Here */
 .hero-section_container{
@@ -33,6 +55,8 @@ html, body{
     min-height: 85vh;
     max-height: auto;
     background-color: rgba(173, 208, 152, 0.701);
+    /* background-color: white; */
+    color:var(--ble-color-txt);
     padding-top:3.4rem;
     padding-left:2rem;
     padding-right:2rem;
@@ -165,10 +189,11 @@ html, body{
     justify-content: center;
     align-items: center;
     button{
-        padding: 1em;
+        padding: 0.7em 1em;
         font-size: 1em;
         border-radius: 1em;
-        border:0.1em solid transparent;
+        border:0.1em solid var(--button-initial-color);
+        background:var(--body-background-color);
         transition: all 0.1s ease;
         cursor: pointer;
     }
@@ -181,8 +206,8 @@ html, body{
     right:1em;
 }
 .hm-prevBtn button:hover , .hm-nextBtn button:hover{
-  background-color: rgba(116, 148, 88, 0.3);
-  border:0.1em solid rgba(0, 0, 0, 0.501);
+  background-color:var(--ble-color-txt);
+  color:var(--button-text-color);
 }
 
 /* user related Product stylling Start */
@@ -191,7 +216,7 @@ html, body{
     width: 100vw;
     max-width: 100%;
     padding:2em;
-    background-color: rgb(255, 253, 253);
+    background:var(--body-background-color);
     font-size: clamp(2rem,1.3vw,2rem);
     display: flex;
     flex-direction: column;
@@ -209,9 +234,10 @@ html, body{
 #user-related-head{
    font-size: 2em;
    font-weight: 600;
+   color:var(--body-text-color);
 }
 #user-related-head span{
-    color:var(--lw-wht-color);
+   color:var(--text-md-black-color);
 }
 .rel-slide_btn{
     display: flex;
@@ -220,10 +246,16 @@ html, body{
 }
 .rel-slide_btn button{
     padding:1em 1.4em;
-    border:0.1em solid black;
+    border:0.1em solid var(--button-initial-color);
+    background:var(--body-background-color);
     margin-right:0.5em;
     border-radius: 0.5em;
-    cursor: pointer;    
+    cursor: pointer; 
+    transition: all 0.2s ease;   
+}
+.rel-slide_btn button:hover{
+    background-color:var(--button-hover-color);
+    color:var(--button-text-color);
 }
 .user-releted-card_box{
     min-width: 100%;
@@ -285,10 +317,10 @@ html, body{
    margin-top:2.5em;
    padding:1em 2em;
    font-weight: 600;
-   border:0.1em solid black;
+   border:0.1em solid var(--back-color);
    border-radius: 2em;
-   background-color: white;
-   color:rgba(0, 0, 0, 0.753);
+   background: var(--body-background-color);
+   color:var(--body-text-color);
    cursor: pointer;
 }
 .rel-item-image{
@@ -309,6 +341,7 @@ html, body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: clamp(1rem,2vw,1rem);
 }
 .new-arivale-para{
     min-height: 4em;
@@ -318,12 +351,12 @@ html, body{
     font-size: 1rem;
 }
 .new-arivale-para #new-arival-text{
-   font-size: 2em;
+   font-size: 1.5em;
    letter-spacing: 0.01em;
    font-weight: 600;
+   color: var(--body-text-color);
    span{
-    /* color:rgba(0, 0, 0, 0.444); */
-    color:var(--lw-wht-color);
+    color:var(--text-md-black-color);
    }
 }
 .new-arval-prev-next-btn{
@@ -334,11 +367,16 @@ html, body{
     margin-right: 0.3em;
     padding:1em 1.6em;
     font-weight: 600;
-    border:0.1em solid black;
+    border:0.1em solid var(--button-initial-color);
     border-radius: 0.4em;
-    background-color: white;
-    color:rgba(0, 0, 0, 0.753);
+    background: var(--body-background-color);
+    color:var(--body-text-color);
+    transition: all 0.2s ease;
     cursor: pointer;
+}
+.new-arval-prev-next-btn button:hover{
+    background: var(--button-hover-color);
+    color:var(--button-text-color);
 }
 .new-arival-slider-box{
     min-width: 100%;
@@ -356,7 +394,8 @@ html, body{
 .new-Arival-card-box{
     flex: 0 0 18em;
     height: 27em;
-    border:0.1em solid transparent; 
+    border:0.01em solid var(--back-color); 
+    background: var(--body-background-color);
     display: flex;   
     flex-direction: column;
     justify-content: flex-start;
@@ -367,8 +406,9 @@ html, body{
 .newArival-card-img-box{
     height: 17em;
     width: 100%;
-    background-color: rgba(218, 219, 212, 0.751);
+    /* background-color: rgba(218, 219, 212, 0.751); */
     border-radius: 1em;
+    padding:1em 0;
     position: relative;
     overflow: hidden;
     cursor: pointer;
