--- a/view/listings/index.ejs
+++ b/view/listings/index.ejs
@@ -310,7 +310,7 @@
       <section class="hm-listing-data-box"> 
         <div class="hm-listings-head">
           <h2 class="Listing_main_heading" data-aos="fade-right" data-aos-duration="500" > Discount & Offers Feel</h3>
-          <p class="listing_head_para" data-aos="fade-left" data-aos-duration="500"  >Exclusive Deals Await! Grab Your Favorites Before They're Gone! ⚡</p>
+          <p class="listing_head_para" id="user-related-head" data-aos="fade-left" data-aos-duration="500"  >Exclusive Deals Await! Grab Your Favorites Before They're Gone! ⚡</p>
            <div class="hm-listing_sort_box" data-aos="fade-up" data-aos-duration="500" >
              <button id="hm-listing-availablity" class="hm-listing-SortBtn" >  
               <i class="fa-solid fa-filter"></i>
