--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -32,8 +32,8 @@
       </div>
     </div> 
     <div class="user_cd-profile">  
-      <div class="dark-mode">
-        <i class="fa-solid fa-moon"></i>
+      <div class="dark-mode modeSwitchButton" >
+        <i  class="fa-solid fa-moon"></i>
       </div>
      <% if(currentUser){ %>
       <div class="user-profile_box"> <a href="/shopcard/user-profile"> <i class="fa-solid fa-user"></i> </a></div>
