--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,38 +1,43 @@
 /* CSS Variables for Dark mode and light mode */
-:root {
-    --body-background-color:#f6fafa; /* Dark Mode Color #08131a;  */
-    --body-text-hero-color:#061827; /* Dark Mode Color  */
-    --body-text-color:#000;
-    --body-text-light-color:#fff;
-    --body-dark-light-color:#fff;
-    --text-md-black-color:#484848;
-    --icon-color:#000;
-    --dark-red-color: #e00d0d;
-    --button-initial-color:#081e25;
-    --button-hover-color:#0a2b3c;
-    --button-text-color:#fff;
-    --explore-btn-color:#0e233e;
-    --explore-btn-hover-color:#0e233ef0;
-    --buttons-slider-Box-color:#b8e1d7;
-    --buttons-slider-Box-Shadow:#1d201f32;
-    --text-hover-link-color1:#1fb1e2;
-    --text-hover-link-color2:#0e233e;
+:root{
+    --bodyBackColor: #f6fafa;
+    --heroSectionBackColor:#add098b3;
+    --buttonPrimary: #1e1e1e;
+    --buttonSecondry: #081e25;
+    --buttonSecondryHover: #0c2b34;
+    --color:white;
+    --mdBlack: #060606;
+    --textColor: #132713cd;
+    --lowBlack: #313131;
+    --md_white_color: #e3e3e3;
+    --links:#081225;  
+    --card_shadow: #00000033;  
+    --cardColor: #fefefe;
+    --blackText: #000000;
+    /* --md_blackText: #3c3c3c; */
+    --md_blackText: #b9b9b9;
+    --blackCard:#fefefe;
+    --blackCard2:#e7e8e9;
 }
-
-body.dark {
-    --md-wht--color: #ecebeacc;
-    --lw-wht-color: #18171779;
-    --drk-wht-color: #fff;
-    --back-color: #1a1d1c;
-    --ble-color-txt: #061827;
-    --hover-clor-icon: #55555533;
-    --dark-red-color: #e00d0d;
-}
-
-/* Dark Mode */
-.darkmode{
-    --body-background-color:#f6fafa; 
-
+:root .darkMode{
+    --bodyBackColor: #030b0e;
+    --heroSectionBackColor:#11161ccf;
+    --buttonPrimary:#d4d4d4;
+    --buttonSecondry: #d7d7d7;
+    --buttonSecondryHover: #c6c6c6;
+    --color:#000000;   
+    --mdBlack: #efefef;
+    --textColor: #ffffff;
+    --lowBlack: #afafaf;
+    --md_white_color: #0d0b0b; 
+    --links:#dedede;
+    --card_shadow: #ffffff61; 
+    --cardColor: #e2e2e2;
+    /* --cardColor:black; */
+    --blackText: #000000;
+    --blackCard:#000000;
+    --blackCard2:#0e0e0e;
+    --md_blackText: #3c3c3c;
 }
 *{
     margin:0;
@@ -43,14 +48,14 @@ html, body{
     width: 100%;
     min-height: 100vh !important; 
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 #bodyContainer {
     margin:4em 0;
     min-height: calc(100vh - 10em); 
     padding-bottom: 3em; 
     flex: 1;   
-    background-color: #f6fafa; 
-    /* background-color: #08131a; Final Color */
+    background-color: var(--bodyBackColor); 
     overflow-x: hidden;
 }
 
@@ -58,11 +63,9 @@ html, body{
 /* Hero Section Stylling Start Here */
 .hero-section_container{
     width: 100%;
-    /* height: 85vh; previous original  */
     min-height: 85vh;
     max-height: auto;
-    background-color: rgba(173, 208, 152, 0.701);
-    /* background-color: white; */
+    background-color: var(--heroSectionBackColor);
     color:var(--ble-color-txt);
     padding-top:3.4rem;
     padding-left:2rem;
@@ -77,13 +80,15 @@ html, body{
     width:50%;
     padding:1.4em;
     font-size: clamp(1rem,2vw,2rem);
+    color:var(--lowBlack);
 }
 .sm-text-line h2{
     font-size: 0.8em;
-    color:rgba(19, 39, 19, 0.803);
+    color:var(--textColor);
 }
 .sm-text-line h1{
     font-size: 2.3em;
+    color:var(--textColor);
 }
 .sm-text-line #explore_home_btn{
     margin-top:2em;
@@ -92,10 +97,10 @@ html, body{
     padding:1.4em 2em;
     font-size: 0.5em;
     font-weight: 600;
-    background-color: #0e233e;
+    background-color: var(--buttonSecondry);
     border:none;
     outline: none;
-    color:var(--md-wht--color);
+    color:var(--md_white_color);
     border-radius: 1.7em;
     cursor: pointer;
     transition: all 0.2s ease;
@@ -104,7 +109,7 @@ html, body{
     margin-left:0.4em;
 }
 #explore_home_btn:hover{
-    background-color: var(--explore-btn-hover-color);
+    background-color: var(--buttonSecondryHover);
 }
 .hero-section_container .hero-image-box{
     flex-basis: 60%;
@@ -198,10 +203,11 @@ html, body{
     button{
         padding: 0.7em 1em;
         font-size: 1em;
-        border-radius: 1em;
-        border:0.1em solid var(--button-initial-color);
-        background:var(--body-background-color);
+        border-radius: 0.5em;
+        border:0.1em solid var(--buttonSecondry);
+        background:var(--buttonPrimary);
         transition: all 0.1s ease;
+        color:var(--md_white_color);
         cursor: pointer;
     }
 }
@@ -213,8 +219,8 @@ html, body{
     right:1em;
 }
 .hm-prevBtn button:hover , .hm-nextBtn button:hover{
-  background-color:var(--ble-color-txt);
-  color:var(--button-text-color);
+  background-color:var(--color);
+  color:var(--mdBlack);
 }
 
 /* user related Product stylling Start */
@@ -223,7 +229,7 @@ html, body{
     width: 100vw;
     max-width: 100%;
     padding:2em;
-    background:var(--body-background-color);
+    background:var(--bodyBackColor);
     font-size: clamp(2rem,1.3vw,2rem);
     display: flex;
     flex-direction: column;
@@ -241,10 +247,10 @@ html, body{
 #user-related-head{
    font-size: 2em;
    font-weight: 600;
-   color:var(--body-text-color);
+   color:var(--mdBlack);
 }
 #user-related-head span{
-   color:var(--text-md-black-color);
+   color:var(--lowBlack);
 }
 .rel-slide_btn{
     display: flex;
@@ -253,16 +259,18 @@ html, body{
 }
 .rel-slide_btn button{
     padding:1em 1.4em;
-    border:0.1em solid var(--button-initial-color);
-    background:var(--body-background-color);
+    border:0.1em solid var(--md_white_color);
+    color: var(--md_white_color);
+    background:var(--buttonPrimary);
     margin-right:0.5em;
     border-radius: 0.5em;
     cursor: pointer; 
     transition: all 0.2s ease;   
 }
 .rel-slide_btn button:hover{
-    background-color:var(--button-hover-color);
-    color:var(--button-text-color);
+    background-color:var(--color);
+    color:var(--mdBlack);
+    border:0.1em solid var(--mdBlack);
 }
 .user-releted-card_box{
     min-width: 100%;
@@ -325,10 +333,10 @@ html, body{
    margin-top:2.5em;
    padding:1em 2em;
    font-weight: 600;
-   border:0.1em solid var(--back-color);
+   border:0.1em solid var(--mdBlack);
    border-radius: 2em;
-   background: var(--body-background-color);
-   color:var(--body-text-color);
+   background: var(--color);
+   color:var(--mdBlack);
    cursor: pointer;
 }
 .rel-item-image{
@@ -362,9 +370,9 @@ html, body{
    font-size: 1.5em;
    letter-spacing: 0.01em;
    font-weight: 600;
-   color: var(--body-text-color);
+   color: var(--mdBlack);
    span{
-    color:var(--text-md-black-color);
+    color:var(--lowBlack);
    }
 }
 .new-arval-prev-next-btn{
@@ -375,46 +383,53 @@ html, body{
     margin-right: 0.3em;
     padding:1em 1.6em;
     font-weight: 600;
-    border:0.1em solid var(--button-initial-color);
+    border:0.1em solid var(--md_white_color);
     border-radius: 0.4em;
-    background: var(--body-background-color);
-    color:var(--body-text-color);
+    background: var(--buttonPrimary);
+    color:var(--md_white_color);
     transition: all 0.2s ease;
     cursor: pointer;
 }
 .new-arval-prev-next-btn button:hover{
-    background: var(--button-hover-color);
-    color:var(--button-text-color);
+    background: var(--color);
+    color:var(--mdBlack);
+    border: 0.1em solid var(--mdBlack);
 }
 .new-arival-slider-box{
     min-width: 100%;
     display: flex;
     flex-wrap: nowrap;
-    gap:1em;
+    gap:1.4em;
     overflow-x: auto;
     scrollbar-width: none;
     -ms-overflow-style:none;
     scroll-behavior: smooth;
     white-space: nowrap;
     flex-wrap: nowrap;
+    padding:1.5em;
     scroll-padding-right: 2em;
 }
 .new-Arival-card-box{
     flex: 0 0 18em;
     height: 27em;
-    border:0.01em solid var(--back-color); 
-    background: var(--body-background-color);
+    background: var(--bodyBackColor);
+    color:var(--textColor);
     display: flex;   
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     border-radius: 1em;
     overflow: hidden;
+    transition: all 0.2s ease;
+}
+.new-Arival-card-box:hover{
+    /* box-shadow: -1em 0 2em var(--textColor); */
+    box-shadow: var(--card_shadow) 0px 18px 50px -10px;
+    transform: scale(1.01);
 }
 .newArival-card-img-box{
     height: 17em;
     width: 100%;
-    /* background-color: rgba(218, 219, 212, 0.751); */
     border-radius: 1em;
     padding:1em 0;
     position: relative;
@@ -432,7 +447,7 @@ html, body{
     right:1em;
     cursor: pointer;
     border-radius: 50%;
-    background-color: white;
+    background-color:var(--md_white_color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -453,8 +468,8 @@ html, body{
    padding:0.6em;
    font-size: 0.9em;
    font-weight: 600;
-   background-color: rgb(8, 28, 28);
-   color:rgba(255, 255, 255, 0.808);
+   background-color: var(--buttonSecondry);
+   color:var(--md_white_color);
    border:none;
    transition: all 0.3s ease;
    border-radius: 0.7em;
@@ -511,7 +526,7 @@ html, body{
 }
 .new-arival-title p{
     font-size: 0.9em;
-    color:rgba(0, 0, 0, 0.632);
+    color:var(--lowBlack);
 }
 .newArival-rating-price-box{
     padding-left: 0.4em;
@@ -524,16 +539,16 @@ html, body{
 .newArival-rating-price-box button{
     padding:0.6em 1em;
     font-weight: 600;
-    border:0.16em solid green;
-    color:green;
-    background-color: white;
+    border:0.16em solid var(--buttonSecondry);
+    color:var(--md_white_color);
+    background-color: var(--buttonSecondry);
     border-radius: 0.5em;
     cursor: pointer;
 }
 .newArival-rating-price-box p{
     padding-right:0.3em;
     i{
-        color:rgb(255, 217, 0);
+        color:#ffd900;
     }
 }
 
@@ -550,7 +565,6 @@ html, body{
 @media (max-width: 1200px) {
     .hero-section_container {
         padding:1em 0;
-        /* height: max-content !important; */
         flex-direction: column;
         align-items: center;
         height: auto; 
